Creation of Restaurants Activity
Created activity_restaurant.xml file and added stock images to resources folder.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#C2C0C0</color>
+    <color name="background_grey"> #D9D9D9</color>
+    <color name="uber_green">#3FC060</color>
+    <color name="uber_title">#162328</color>
+    <color name="doordash">#FF3008</color>
 </resources>
