--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <style name="Theme.ResturantReccomendationFrontend" parent="android:Theme.Material.Light.NoActionBar" />
+    <!-- Change the parent theme to Theme.AppCompat -->
+    <style name="Theme.ResturantReccomendationFrontend" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <!-- Add any additional customizations -->
+    </style>
 </resources>
