--- a/app/src/main/res/layout/preferences.xml
+++ b/app/src/main/res/layout/preferences.xml
@@ -37,14 +37,33 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:layout_gravity="center_vertical"/>
+            android:layout_gravity="center_vertical"
+            android:max="100000"/>
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/pref_distance_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/pref_distance_layout"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/pref_distance_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Distance: 0 units"
+            android:textSize="18sp"
+            android:paddingBottom="8dp" />
+    </LinearLayout>
     <LinearLayout
         android:id="@+id/pref_price_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/pref_distance_layout"
+        android:layout_below="@id/pref_distance_label"
         android:layout_alignParentStart="true"
         android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
@@ -177,6 +196,7 @@
             android:textSize="20sp"/>
 
         <Switch
+            android:id="@+id/pref_vegan_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -204,6 +224,7 @@
             android:textSize="20sp"/>
 
         <Switch
+            android:id="@+id/pref_gluten_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
